# neuron

./: .travis.yml  CMakeLists.txt  README.md  build_me.sh  main.cc  main.cpp
.travis/: travis_build_linux.sh  travis_build_osx.sh  travis_prepare_linux.sh  travis_prepare_osx.sh
base/: tantrika.cpp
cmake/: FindSystemC.cmake  UseCython.cmake  mergestaticlibs.cmake
cython/: CMakeLists.txt  Network.pxd  Synapse.pxd  SynapseExp.pxd  setup.py  setup.py.in  synapse.pyx  tantrika.pyx
cython/tests/: test_synapse.py  test_tantrika.py
engine/: CMakeLists.txt  engine.cpp  engine.h
exp/: experiment1.cpp
experiments/: CMakeLists.txt  ff_habitaution.cpp
include/: IAF.h  Network.h  NeuronGroup.h  OdeSystem.h  PeriodicSpikeGenerator.h  SpikeGenerator.h  SpikeGeneratorBase.h  Synapse.cpp  Synapse.h  SynapseAlpha.h  SynapseBase.h  SynapseExp.h  SynapseGroup.h  global.h  sc_ports.hpp  tantrika.h  tantrika_ports.hpp
models/: CMakeLists.txt  integrate_and_fire.cc  integrate_and_fire.h
network/: CMakeLists.txt  Connectors.hh  Network.cpp  NetworkConnectors.hpp  NetworkShowInfoVisitor.hpp  PeriodicSpikeGenerator.cpp  SpikeGenerator.cpp  SpikeGenerator.h  SpikeGeneratorBase.cpp
neuron/: CMakeLists.txt  IAF.cpp  IAF.h  NeuronGroup.cpp
python/: NOTES.md  approximate_synapse_damped_osci.py  synapse_ode.maxima  test_synapse_ode.py
src/: tantrika.cpp  tantrika.h
stimulus/: CMakeLists.txt  PeriodicSpikeGenerator.cpp  SpikeGeneratorBase.cpp
synapse/: AlphaSynapse.cpp  AlphaSynapse.h  CMakeLists.txt  ExpSynapse.cpp  ExpSynapse.h  Hebbian.h  OdeSystem.h  Synapse.cpp  Synapse.h  SynapseAlpha.cpp  SynapseBase.cpp  SynapseBase.h  SynapseExp.cpp  SynapseGroup.cpp  simple_synapse.h  synapse.h  test_exp_syn.cpp  test_hebbian.cpp  test_simple_synapse.cc
tests/: CMakeLists.txt  plot_data_files.py  test_exp_syn.cpp  test_hebbian.cpp  test_iaf.cpp  test_iaf_brian.py  test_network.cpp  test_synapses.cpp  test_systemc_dyn1.cpp
tests/brian2/: iaf.py
utility/: CMakeLists.txt  assert.hpp  data_util.cpp  data_util.h  numeric.hpp  plot_util.cpp  plot_util.h  sc_ports.hpp  sc_utils.cpp  sc_utils.hpp  str_util.hpp  utility.h
